[gd_scene load_steps=2 format=3 uid="uid://b5na7m460bdm2"]

[ext_resource type="Script" path="res://DialogueSystem/DialogueSystem.gd" id="1_02rcb"]

[node name="DialogueSystem" type="Node2D"]
script = ExtResource("1_02rcb")

[node name="CharTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="LineTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
